--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
             </div>
         </div>
 
-        <div class="AbtUs" style="background-color: #fff; font-family: roboto; color: #000000;padding-top:30px;padding-bottom:30px;padding-right: 40px;">
+        <div class="AbtUs" style="background-color: #fff; font-family: roboto; color: #000000;padding-top:30px;padding-right: 40px;">
             <h1 style = "text-align:end;font-size: 50px;">ABOUT US</h1>
             <img src="https://ftc18225.everstem.org/images/aboutus.png" style="position:absolute;left:0px;padding:10px;width:100%" />
-            <p style="text-align:end;font-size:16px;position:absolute;right:0px;width:300px;padding:10px">We are FIRST Tech Challenge (FTC) Team 18225 High Definition, a
+            <p style="text-align:end;font-size:16px;position:absolute;right:30px;width:500px;padding:10px">We are FIRST Tech Challenge (FTC) Team 18225 High Definition, a
                 4th year veteran robotics team from Bellevue, Washington composed of 12 enthusiastic
                 students grades 7-12. <b>Our mission</b> is to promote STEM and FIRST within our
                 community to inspire the next generation of innovators to solve challenges of the
