--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
 
         <div class="AbtUs" style="background-color:#fff;font-family:roboto;color:#000000;padding-top:20px;padding-right:40px;padding-bottom:5px">
             <h1 style = "text-align:end;font-size: 50px;">ABOUT US</h1>
-            <p style="text-align:end;font-size:20px;position:absolute;right:30px;width:500px;padding:10px">We are FIRST Tech Challenge (FTC) Team 18225 High Definition, a
+            <p style="text-align:end;font-size:20px;position:static;right:30px;width:500px;padding:10px">We are FIRST Tech Challenge (FTC) Team 18225 High Definition, a
                 4th year veteran robotics team from Bellevue, Washington composed of 12 enthusiastic
                 students grades 7-12. <b>Our mission</b> is to promote STEM and FIRST within our
-                community to inspire the next generation of innovators to solve challenges of the
+                community, inspiring and planting seeds for the next generation of innovators to solve challenges of the
                 future! We spread mechanical, programming, business, and other practices within the
-                community to ensure their success.</p>
+                community to ensure their success and make sure that no one is left behind.</p>
             <img src="https://ftc18225.everstem.org/images/aboutus.png" style="position:absolute;left:0px;padding:10px;width:100%"/>
         </div>
 
