--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
         <div class="AbtUs" style="position:relative;background-color:#fff;font-family:roboto;color:#000000;padding-top:20px;padding-right:40px;padding-bottom:5px">
             <h1 style = "text-align:end;font-size: 60px;">ABOUT US</h1>
-            <img src="images/aboutus.png" style="position:absolute;top:50px;left:40px;padding:30px;width:50%"/>
+            <img src="images/aboutus.png" style="position:absolute;top:50px;left:10px;padding:30px;width:50%"/>
             <p style="text-align:end;font-size:20px;position:absolute;right:30px;top:120px;width:500px;padding:10px">We are FIRST Tech Challenge (FTC) Team 18225 High Definition, a
                 4th year veteran robotics team from Bellevue, Washington composed of 12 enthusiastic
                 students grades 7-12. <b>Our mission</b> is to promote STEM and FIRST within our
@@ -84,6 +84,17 @@
                 future! We spread mechanical, programming, business, and other practices within the
                 community to ensure their success and make sure that no one is left behind.</p>
 
+        </div>
+        
+        <div class = Animation>
+            <div class="section" style="text-align:center;font-family:roboto;color:#AB3D86;font-size:45px;flex-direction:row;padding-top:40px;padding-bottom:100px">
+                As a team, we strive to...
+                <div class="box b1">INSPIRE</div>
+                <div class="box b2">MOTIVATE</div>
+                <div class="box b3">CONNECT</div>
+                <div class="box b4">INNOVATE</div>
+                <div class="box b5">CONTROL</div>
+            </div>
         </div>
 
         <!--
