--- a/index.html
+++ b/index.html
@@ -85,6 +85,44 @@
                 community to ensure their success and make sure that no one is left behind.</p>
 
         </div>
+
+        <div class="Impact" style="background-color:#fff;padding-top:20px;padding-right:40px;padding-bottom:5px">
+            <h1 style = "text-align:start;font-size:60px;font-family:roboto;color:#000000">OUR IMPACT</h1>
+            <div class="flex impact">
+                <div class="person-three-grid grid" style="width:80%;">
+                    <div class="col" style="text-align:center"><svg aria-hidden="true" focusable="false"
+                                                                    data-prefix="fas" data-icon="user" class="svg-inline--fa fa-user icon" role="img"
+                                                                    xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="75" height="75">
+                        <path fill="currentColor"
+                              d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H418.3c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304H178.3z">
+                        </path>
+                    </svg>
+                        <h2>Impacted 6000+ People</h2>
+                    </div>
+                    <div class="col" style="text-align:center"><svg aria-hidden="true" focusable="false"
+                                                                    data-prefix="fas" data-icon="people-carry-box"
+                                                                    class="svg-inline--fa fa-people-carry-box icon" role="img"
+                                                                    xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512" width="75" height="75">
+                        <path fill="currentColor"
+                              d="M80 48a48 48 0 1 1 96 0A48 48 0 1 1 80 48zm64 193.7v65.1l51 51c7.1 7.1 11.8 16.2 13.4 26.1l15.2 90.9c2.9 17.4-8.9 33.9-26.3 36.8s-33.9-8.9-36.8-26.3l-14.3-85.9L66.8 320C54.8 308 48 291.7 48 274.7V186.6c0-32.4 26.2-58.6 58.6-58.6c24.1 0 46.5 12 59.9 32l47.4 71.1 10.1 5V160c0-17.7 14.3-32 32-32H384c17.7 0 32 14.3 32 32v76.2l10.1-5L473.5 160c13.3-20 35.8-32 59.9-32c32.4 0 58.6 26.2 58.6 58.6v88.1c0 17-6.7 33.3-18.7 45.3l-79.4 79.4-14.3 85.9c-2.9 17.4-19.4 29.2-36.8 26.3s-29.2-19.4-26.3-36.8l15.2-90.9c1.6-9.9 6.3-19 13.4-26.1l51-51V241.7l-19 28.5c-4.6 7-11 12.6-18.5 16.3l-59.6 29.8c-2.4 1.3-4.9 2.2-7.6 2.8c-2.6 .6-5.3 .9-7.9 .8H256.7c-2.5 .1-5-.2-7.5-.7c-2.9-.6-5.6-1.6-8.1-3l-59.5-29.8c-7.5-3.7-13.8-9.4-18.5-16.3l-19-28.5zM2.3 468.1L50.1 348.6l49.2 49.2-37.6 94c-6.6 16.4-25.2 24.4-41.6 17.8S-4.3 484.5 2.3 468.1zM512 0a48 48 0 1 1 0 96 48 48 0 1 1 0-96zm77.9 348.6l47.8 119.5c6.6 16.4-1.4 35-17.8 41.6s-35-1.4-41.6-17.8l-37.6-94 49.2-49.2z">
+                        </path>
+                    </svg>
+                        <h2>Mentored 30+ Teams</h2>
+                    </div>
+                    <div class="col" style="text-align:center"><svg aria-hidden="true" focusable="false"
+                                                                    data-prefix="fas" data-icon="hand-holding-dollar"
+                                                                    class="svg-inline--fa fa-hand-holding-dollar icon" role="img"
+                                                                    xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512" width="75" height="75">
+                        <path fill="currentColor"
+                              d="M312 24V34.5c6.4 1.2 12.6 2.7 18.2 4.2c12.8 3.4 20.4 16.6 17 29.4s-16.6 20.4-29.4 17c-10.9-2.9-21.1-4.9-30.2-5c-7.3-.1-14.7 1.7-19.4 4.4c-2.1 1.3-3.1 2.4-3.5 3c-.3 .5-.7 1.2-.7 2.8c0 .3 0 .5 0 .6c.2 .2 .9 1.2 3.3 2.6c5.8 3.5 14.4 6.2 27.4 10.1l.9 .3c11.1 3.3 25.9 7.8 37.9 15.3c13.7 8.6 26.1 22.9 26.4 44.9c.3 22.5-11.4 38.9-26.7 48.5c-6.7 4.1-13.9 7-21.3 8.8V232c0 13.3-10.7 24-24 24s-24-10.7-24-24V220.6c-9.5-2.3-18.2-5.3-25.6-7.8c-2.1-.7-4.1-1.4-6-2c-12.6-4.2-19.4-17.8-15.2-30.4s17.8-19.4 30.4-15.2c2.6 .9 5 1.7 7.3 2.5c13.6 4.6 23.4 7.9 33.9 8.3c8 .3 15.1-1.6 19.2-4.1c1.9-1.2 2.8-2.2 3.2-2.9c.4-.6 .9-1.8 .8-4.1l0-.2c0-1 0-2.1-4-4.6c-5.7-3.6-14.3-6.4-27.1-10.3l-1.9-.6c-10.8-3.2-25-7.5-36.4-14.4c-13.5-8.1-26.5-22-26.6-44.1c-.1-22.9 12.9-38.6 27.7-47.4c6.4-3.8 13.3-6.4 20.2-8.2V24c0-13.3 10.7-24 24-24s24 10.7 24 24zM568.2 336.3c13.1 17.8 9.3 42.8-8.5 55.9L433.1 485.5c-23.4 17.2-51.6 26.5-80.7 26.5H192 32c-17.7 0-32-14.3-32-32V416c0-17.7 14.3-32 32-32H68.8l44.9-36c22.7-18.2 50.9-28 80-28H272h16 64c17.7 0 32 14.3 32 32s-14.3 32-32 32H288 272c-8.8 0-16 7.2-16 16s7.2 16 16 16H392.6l119.7-88.2c17.8-13.1 42.8-9.3 55.9 8.5zM193.6 384l0 0-.9 0c.3 0 .6 0 .9 0z">
+                        </path>
+                    </svg>
+                        <h2>Awarded $3000 in Grants</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <!--
         <div class = Animation>
             <div class="section" style="text-align:center;font-family:roboto;color:#AB3D86;font-size:45px;flex-direction:row;padding-top:40px;padding-bottom:100px">
