--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <body>
     <div id="__next">
         <div class="coolHeader"
-            style="background-repeat:no-repeat;background-position:top right;background-attachment:fixed;background-size:cover;height:150vh">
+            style="background-repeat:no-repeat;background-position:top right;background-attachment:fixed;background-size:cover;height:100vh">
             <div class="Tabs">
                 <ul class="tabs">
                     <li class="logo"><a href="/"><img src="https://ftc18225.everstem.org/logo.png" width="45px"
@@ -75,9 +75,9 @@
         </div>
 
         <div class="AbtUs" style="position:relative;background-color:#fff;font-family:roboto;color:#000000;padding-top:20px;padding-right:40px;padding-bottom:5px">
-            <h1 style = "text-align:end;font-size: 60px;">ABOUT US</h1>
+            <h1 style = "text-align:end;font-size:60px;">ABOUT US</h1>
             <img src="images/aboutus.png" style="position:static;top:50px;left:10px;padding:30px;width:50%"/>
-            <p style="text-align:end;font-size:20px;position:absolute;right:30px;top:120px;width:500px;padding:10px">We are FIRST Tech Challenge (FTC) Team 18225 High Definition, a
+            <p style="text-align:end;font-size:20px;position:absolute;right:30px;top:100px;width:500px;padding:10px">We are FIRST Tech Challenge (FTC) Team 18225 High Definition, a
                 4th year veteran robotics team from Bellevue, Washington composed of 12 enthusiastic
                 students grades 7-12. <b>Our mission</b> is to promote STEM and FIRST within our
                 community, inspiring and planting seeds for the next generation of innovators to solve challenges of the
@@ -86,7 +86,7 @@
 
         </div>
 
-        <div class="Impact" style="background-color:#fff;padding-top:20px;padding-right:40px;padding-bottom:5px">
+        <div class="Impact" style="background-color:#fff;padding-top:20px;padding-left:40px;padding-bottom:5px">
             <h1 style = "text-align:start;font-size:60px;font-family:roboto;color:#000000">OUR IMPACT</h1>
             <div class="flex impact">
                 <div class="person-three-grid grid" style="width:80%;">
