--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
         <div class="AbtUs" style="position:relative;background-color:#fff;font-family:roboto;color:#000000;padding-top:20px;padding-right:40px;padding-bottom:5px">
             <h1 style = "text-align:end;font-size:60px;">ABOUT US</h1>
-            <img src="images/aboutus.png" style="position:absolute;top:50px;left:10px;padding:30px;width:50%"/>
+            <img src="images/aboutus.png" style="position:static;top:50px;left:10px;padding:30px;width:50%"/>
             <p style="text-align:end;font-size:20px;position:absolute;right:30px;top:120px;width:500px;padding:10px">We are FIRST Tech Challenge (FTC) Team 18225 High Definition, a
                 4th year veteran robotics team from Bellevue, Washington composed of 12 enthusiastic
                 students grades 7-12. <b>Our mission</b> is to promote STEM and FIRST within our
@@ -86,9 +86,9 @@
 
         </div>
 
-        <div class="blankBox">
+        <!--<div class="blankBox">
 
-        </div>
+        </div>-->
 
         <div class="Impact" style="background-color:#fff;padding-top:20px;padding-left:40px;padding-bottom:5px">
             <h1 style = "text-align:start;font-size:60px;font-family:roboto;color:#000000">OUR IMPACT</h1>
