--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 <li>organized FLL information/mentoring sessions in <b>India</b></li>
                 <li>donated FLL/FTC kits and gave out grants to <b>rookie/mentee FIRST teams</b></li>
             </ul>
-            <i class="fa-solid fa-users"></i>
+            <i class="fa-solid fa-users" style="font-size:48px;color:black;"></i>
 
                 <div class="person-three-grid grid" style="width:80%;">
                     <div class="col" style="text-align:center">
