--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
 
     <!-- FontAwesome Setup -->
     <script src="https://kit.fontawesome.com/19f68f3d84.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
+
 
     <style>
         .icon path {
@@ -84,7 +86,7 @@
 
             <img src="images/aboutus.png" style="position:static;top:50px;left:10px;padding:30px;width:50%"/>
             <h1 style = "position:absolute;top:30px;text-align:end;right:40px;font-size:60px;">ABOUT US</h1>
-            <p style="text-align:end;font-size:20px;position:absolute;right:30px;top:120px;width:500px;padding:10px">We are FIRST Tech Challenge (FTC) Team 18225 High Definition, a
+            <p style="text-align:end;font-size:20px;position:absolute;right:30px;top:150px;width:500px;padding:10px">We are FIRST Tech Challenge (FTC) Team 18225 High Definition, a
                 4th year veteran robotics team from Bellevue, Washington composed of 12 enthusiastic
                 students grades 7-12. <b>Our mission</b> is to promote STEM and FIRST within our
                 community, inspiring and planting seeds for the next generation of innovators to solve challenges of the
@@ -97,7 +99,7 @@
 
         </div>-->
 
-        <div class="Impact" style="font-family:roboto;color:#000000;background-color:#fff;padding-top:10px;padding-left:40px;padding-right:40px;padding-bottom:5px">
+        <div class="Impact" style="font-family:roboto;color:#000000;background-color:#fff;padding-top:5px;padding-left:40px;padding-right:40px;padding-bottom:5px">
             <h1 style = "text-align:start;font-size:60px;">OUR IMPACT</h1>
             <p style="text-align:start;font-size:20px;">Our team places an emphasis on outreaching to and increasing STEM accessibility in <b>under-represented communities</b>. Some of our current and past initiatives are:</p>
             <ul style = "text-align:start;font-size:20px">
