--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <div class="Impact" style="font-family:roboto;color:#000000;background-color:#fff;padding-top:5px;padding-left:40px;padding-right:40px;padding-bottom:5px">
             <h1 style = "text-align:start;font-size:60px;">OUR IMPACT</h1>
             <p style="text-align:start;font-size:20px;">Our team places an emphasis on outreaching to and increasing STEM accessibility in <b>under-represented communities</b>. Some of our current and past initiatives are:</p>
-            <ul style = "text-align:start;font-size:20px">
+            <ul style = "text-align:start;font-size:16px">
                 <li>presenting FIRST and a robot demonstration to the <b>Ocosta School District</b>, which consists of a rural, coastal community with tribal students</li>
                 <li>setting up one-to-one mentors and workshops at <b>Big Brothers Big Sisters (BBBS)</b>, an organization for <b>at-risk/low-income youth</b></li>
                 <li>creating a bi-weekly robotics club at <b>Sherwood Forest Elementary School</b>, a <b>Title 1 school</b> (meaning that many students are from low-income households)</li>
@@ -112,21 +112,25 @@
             </ul>
 
                 <div class="person-three-grid grid" style="width:80%;">
-                    <div class="col" style="text-align:center">
-                        <i class="fa-solid fa-users"></i>
+                    <div class="col" style="color: #af2d83;text-align:center">
+                        <i class="fa-solid fa-users" style="font-size:64px;"></i>
                         <h2>Impacted 6000+ People</h2>
                     </div>
-                    <div class="col" style="text-align:center">
-                        <i class="fa-solid fa-people-carry-box"></i>
+                    <div class="col" style="color: #af2d83;text-align:center">
+                        <i class="fa-solid fa-people-carry-box" style="font-size:64px;"></i>
                         <h2>100+ FIRST Teams Created/Mentored</h2>
                     </div>
-                    <div class="col" style="text-align:center">
-                        <i class="fa-solid fa-hand-holding-dollar"></i>
+                    <div class="col" style="color: #af2d83;text-align:center">
+                        <i class="fa-solid fa-hand-holding-dollar" style="font-size:64px;"></i>
                         <h2>Awarded $3000 in Grants</h2>
                     </div>
-                    <div class="col" style="text-align:center">
-                        <i class="fa-solid fa-globe"></i>
+                    <div class="col" style="color: #af2d83;text-align:center">
+                        <i class="fa-solid fa-globe" style="font-size:64px;"></i>
                         <h2>6 Continents Reached</h2>
+                    </div>
+                    <div class=col style="color: #af2d83;text-align:center">
+                        <i class="fa-solid fa-clock" style="font-size: 64px;color: #af2d83;"></i>
+                        <h2>1,800+ Hours of Outreach</h2>
                     </div>
                 </div>
         </div>
