--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
 
         </div>-->
 
-        <div class="Impact" style="font-family:roboto;color:#000000;background-color:#fff;padding-top:5px;padding-left:40px;padding-right:100px;padding-bottom:5px">
+        <div class="Impact" style="font-family:roboto;color:#000000;background-color:#fff;padding-top:5px;padding-left:40px;padding-right:40px;padding-bottom:5px">
             <h1 style = "text-align:start;font-size:60px;">OUR IMPACT</h1>
-            <p style="text-align:start;font-size:20px;">Our team places an emphasis on outreaching to and increasing STEM accessibility in <b>under-represented communities</b>. Some of our current and past initiatives are:</p>
-            <ul style = "text-align:start;font-size:20px">
+            <p style="text-align:start;font-size:20px;width=50%;">Our team places an emphasis on outreaching to and increasing STEM accessibility in <b>under-represented communities</b>. Some of our current and past initiatives are:</p>
+            <ul style = "text-align:start;font-size:20px;width=50%;">
                 <li>presenting FIRST and a robot demonstration to the <b>Ocosta School District</b>, which consists of a rural, coastal community with tribal students</li>
                 <li>setting up one-to-one mentors and workshops at <b>Big Brothers Big Sisters (BBBS)</b>, an organization for <b>at-risk/low-income youth</b></li>
                 <li>creating a bi-weekly robotics club at <b>Sherwood Forest Elementary School</b>, a <b>Title 1 school</b> (meaning that many students are from low-income households)</li>
