--- a/index.html
+++ b/index.html
@@ -85,12 +85,12 @@
 
             <img src="images/aboutus.png" style="position:static;top:50px;left:10px;padding:30px;width:50%"/>
             <h1 style = "position:absolute;top:30px;text-align:end;right:40px;font-size:60px;">ABOUT US</h1>
-            <p style="text-align:end;font-size:20px;position:absolute;right:30px;top:150px;width:500px;padding:10px">We are FIRST Tech Challenge (FTC) Team 18225 High Definition, a
+            <span style="text-align:end;font-size:20px;position:static;right:30px;top:150px;width:500px;padding:10px">We are FIRST Tech Challenge (FTC) Team 18225 High Definition, a
                 4th year veteran robotics team from Bellevue, Washington composed of 12 enthusiastic
                 students grades 7-12. <b>Our mission</b> is to promote STEM and FIRST within our
                 community, inspiring and planting seeds for the next generation of innovators to solve challenges of the
                 future! We spread mechanical, programming, business, and other practices within the
-                community to ensure their success and make sure that no one is left behind.</p>
+                community to ensure their success and make sure that no one is left behind.</span>
 
         </div>
 
