--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         </div>
 
         <div class="AbtUs" style="position:relative;background-color:#fff;font-family:roboto;color:#000000;padding-top:20px;padding-right:40px;padding-bottom:5px">
-            <h1 style = "position:absolute;top:30px;text-align:end;right:40px;font-size:60px;">ABOUT US</h1>
+            <h1 style = "position:static;top:30px;text-align:end;right:40px;font-size:60px;">ABOUT US</h1>
             <div class="container">
                 <img src="images/aboutus.png" style="position:static;top:50px;left:10px;padding:30px;width:100%"/>
                 <span style="text-align:end;font-size:20px;position:static;right:30px;top:150px;width:500px;padding:10px">We are FIRST Tech Challenge (FTC) Team 18225 High Definition, a
