--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <div class="AbtUs" style="position:relative;background-color:#fff;font-family:roboto;color:#000000;padding-top:20px;padding-right:40px;padding-bottom:5px">
             <h1 style = "position:static;top:30px;text-align:end;right:40px;font-size:60px;">ABOUT US</h1>
             <div class="container">
-                <img src="images/aboutus.png" style="position:static;top:50px;left:10px;padding:30px;width:100%"/>
+                <img src="images/aboutus.png" style="position:static;top:50px;left:10px;padding:30px;width:200%; height:200%;"/>
                 <span style="text-align:end;font-size:20px;position:static;right:30px;top:150px;width:500px;padding:10px">We are FIRST Tech Challenge (FTC) Team 18225 High Definition, a
                 4th year veteran robotics team from Bellevue, Washington composed of 12 enthusiastic
                 students grades 7-12. <b>Our mission</b> is to promote STEM and FIRST within our
