--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charSet="utf-8" />
@@ -62,7 +62,7 @@
             style="background-repeat:no-repeat;background-position:top right;background-attachment:fixed;background-size:cover;height:100vh">
             <div class="Tabs">
                 <ul class="tabs">
-                    <li class="logo"><a href="/"><img src="https://ftc18225.everstem.org/logo.png" width="45px"
+                    <li class="logo"><a href="/"><img src="https://ftc18225.everstem.org/logo.png" alt = "Logo" width="45px"
                                 height="45px" /></a></li>
                     <li class="tab"><a id="Home" class="tab-label this-page" href="/">Home</a></li>
                     <li class="tab"><a id="About" class="tab-label" href="/about.html">About</a></li>
@@ -84,7 +84,7 @@
         <div class="AbtUs" style="position:relative;background-color:#fff;font-family:roboto;color:#000000;padding-top:20px;padding-right:40px;padding-bottom:5px">
             <h1 style = "position:static;top:30px;text-align:end;right:40px;font-size:60px;">ABOUT US</h1>
             <div class="container">
-                <img src="images/aboutus.png" style="position:static;top:50px;left:10px;padding:30px;width:100%;"/>
+                <img src="images/aboutus.png" alt = "Team Photos - About Us" style="position:static;top:50px;left:10px;padding:30px;width:50%;"/>
                 <p style="text-align:end;font-size:20px;position:static;right:30px;top:150px;width:500px;padding:10px">We are FIRST Tech Challenge (FTC) Team 18225 High Definition, a
                 4th year veteran robotics team from Bellevue, Washington composed of 12 enthusiastic
                 students grades 7-12. <b>Our mission</b> is to promote STEM and FIRST within our
