--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <div class="AbtUs" style="background-color:#fff;font-family:roboto;color:#000000;text-align:end;padding-top:20px;padding-right:40px;padding-bottom:5px">
             <div class = "text">
                 <h1 style = "position:static;top:30px;right:40px;font-size:60px;">ABOUT US</h1>
-                <p style="font-size:20px;position:static;right:30px;top:150px;width:500px;padding:10px">We are FIRST Tech Challenge (FTC) Team 18225 High Definition, a
+                <p style="font-size:20px;position:static;right:30px;top:150px;padding:10px">We are FIRST Tech Challenge (FTC) Team 18225 High Definition, a
                     4th year veteran robotics team from Bellevue, Washington composed of 12 enthusiastic
                     students grades 7-12. <b>Our mission</b> is to promote STEM and FIRST within our
                     community, inspiring and planting seeds for the next generation of innovators to solve challenges of the
