--- a/index.html
+++ b/index.html
@@ -82,16 +82,16 @@
         </div>
 
         <div class="AbtUs" style="background-color:#fff;font-family:roboto;color:#000000;text-align:end;padding-top:20px;padding-right:40px;padding-bottom:5px">
-            <div class = "text">
-                <h1 style = "position:static;top:30px;right:40px;font-size:60px;">ABOUT US</h1>
-                <p style="font-size:20px;position:static;right:30px;top:150px;padding:10px">We are FIRST Tech Challenge (FTC) Team 18225 High Definition, a
-                    4th year veteran robotics team from Bellevue, Washington composed of 12 enthusiastic
-                    students grades 7-12. <b>Our mission</b> is to promote STEM and FIRST within our
-                    community, inspiring and planting seeds for the next generation of innovators to solve challenges of the
-                    future! We spread mechanical, programming, business, and other practices within the
-                    community to ensure their success and make sure that no one is left behind.</p>
-            </div>
             <div class="container">
+                <div class = "text">
+                    <h1 style = "position:static;top:30px;right:40px;font-size:60px;">ABOUT US</h1>
+                    <p style="font-size:20px;position:static;right:30px;top:150px;padding:10px">We are FIRST Tech Challenge (FTC) Team 18225 High Definition, a
+                        4th year veteran robotics team from Bellevue, Washington composed of 12 enthusiastic
+                        students grades 7-12. <b>Our mission</b> is to promote STEM and FIRST within our
+                        community, inspiring and planting seeds for the next generation of innovators to solve challenges of the
+                        future! We spread mechanical, programming, business, and other practices within the
+                        community to ensure their success and make sure that no one is left behind.</p>
+                </div>
                 <img src="images/aboutus.png" alt = "Team Photos - About Us" style="position:static;top:50px;left:10px;padding:30px;width:50%;"/>
             </div>
 
@@ -119,11 +119,11 @@
                 <div class="person-three-grid grid" style="width:80%;">
                     <div class="col" style="text-align:center">
                         <i class="fa-solid fa-users" style="color:#af2d83;font-size:64px;"></i>
-                        <h2>Impacted <span style="color:#af2d83;">6000+ People</span></h2>
+                        <h2>Impacted <span style="color:#af2d83;">6000+</span> People</h2>
                     </div>
                     <div class="col" style="text-align:center">
                         <i class="fa-solid fa-people-carry-box" style="color:#af2d83;font-size:64px;"></i>
-                        <h2><span style="color:#af2d83;">100+ FIRST Teams</span> Created/Mentored</h2>
+                        <h2><span style="color:#af2d83;">100+</span> FIRST Teams Created/Mentored</h2>
                     </div>
                     <div class="col" style="text-align:center">
                         <i class="fa-solid fa-hand-holding-dollar" style="color:#af2d83;font-size:64px;"></i>
@@ -131,11 +131,11 @@
                     </div>
                     <div class="col" style="text-align:center">
                         <i class="fa-solid fa-globe" style="color:#af2d83;font-size:64px;"></i>
-                        <h2><span style="color:#af2d83;">6 Continents</span> Reached</h2>
+                        <h2><span style="color:#af2d83;">6</span> Continents Reached</h2>
                     </div>
                     <div class=col style="text-align:center">
                         <i class="fa-solid fa-clock" style="font-size: 64px;color: #af2d83;"></i>
-                        <h2><span style="color:#af2d83;">1,800+ Hours</span> of Outreach</h2>
+                        <h2><span style="color:#af2d83;">1,800+</span> Hours of Outreach</h2>
                     </div>
                 </div>
         </div>
