--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
 
         <div class="AbtUs" style="background-color:#fff;font-family:roboto;color:#000000;text-align:end;padding-top:20px;padding-right:40px;padding-bottom:5px">
             <div class="container">
+                <img src="images/aboutus.png" alt = "Team Photos - About Us" style="position:static;top:50px;left:10px;padding:30px;width:50%;"/>
                 <div class = "text">
                     <h1 style = "position:static;top:30px;right:40px;font-size:60px;">ABOUT US</h1>
                     <p style="font-size:20px;position:static;right:30px;top:150px;padding:10px">We are FIRST Tech Challenge (FTC) Team 18225 High Definition, a
@@ -92,7 +93,6 @@
                         future! We spread mechanical, programming, business, and other practices within the
                         community to ensure their success and make sure that no one is left behind.</p>
                 </div>
-                <img src="images/aboutus.png" alt = "Team Photos - About Us" style="position:static;top:50px;left:10px;padding:30px;width:50%;"/>
             </div>
 
 
@@ -104,17 +104,23 @@
         </div>-->
 
         <div class="Impact" style="font-family:roboto;color:#000000;background-color:#fff;padding-top:5px;padding-left:40px;padding-right:40px;padding-bottom:5px">
-            <h1 style = "text-align:start;font-size:60px;">OUR IMPACT</h1>
-            <p style="text-align:start;font-size:20px;width=50%;">Our team places an emphasis on outreaching to and increasing STEM accessibility in <b>under-represented communities</b>. Some of our current and past initiatives are:</p>
-            <ul style = "text-align:start;font-size:20px;width=50%;padding-bottom:100px;">
-                <li>presenting FIRST and a robot demonstration to the <b>Ocosta School District</b>, which consists of a rural, coastal community with tribal students</li>
-                <li>setting up one-to-one mentors and workshops at <b>Big Brothers Big Sisters (BBBS)</b>, an organization for <b>at-risk/low-income youth</b></li>
-                <li>creating a bi-weekly robotics club at <b>Sherwood Forest Elementary School</b>, a <b>Title 1 school</b> (meaning that many students are from low-income households)</li>
-                <li>attending the <b>2024 Affiliated Tribes for Northwest Indians Conference</b> to spread knowledge about the FIRST Program and plant efforts towards creating a tribal team</li>
-                <li>hosted a bi-weekly FLL club to four girls in <b>El Salvador</b></li>
-                <li>organized FLL information/mentoring sessions in <b>India</b></li>
-                <li>donated FLL/FTC kits and gave out grants to <b>rookie/mentee FIRST teams</b></li>
-            </ul>
+            <div class = container>
+                <div class = text>
+                    <h1 style = "text-align:start;font-size:60px;">OUR IMPACT</h1>
+                    <p style="text-align:start;font-size:20px;width=50%;">Our team places an emphasis on outreaching to and increasing STEM accessibility in <b>under-represented communities</b>. Some of our current and past initiatives are:</p>
+                    <ul style = "text-align:start;font-size:20px;width=50%;padding-bottom:100px;">
+                        <li>presenting FIRST and a robot demonstration to the <b>Ocosta School District</b>, which consists of a rural, coastal community with tribal students</li>
+                        <li>setting up one-to-one mentors and workshops at <b>Big Brothers Big Sisters (BBBS)</b>, an organization for <b>at-risk/low-income youth</b></li>
+                        <li>creating a bi-weekly robotics club at <b>Sherwood Forest Elementary School</b>, a <b>Title 1 school</b> (meaning that many students are from low-income households)</li>
+                        <li>attending the <b>2024 Affiliated Tribes for Northwest Indians Conference</b> to spread knowledge about the FIRST Program and plant efforts towards creating a tribal team</li>
+                        <li>hosted a bi-weekly FLL club to four girls in <b>El Salvador</b></li>
+                        <li>organized FLL information/mentoring sessions in <b>India</b></li>
+                        <li>donated FLL/FTC kits and gave out grants to <b>rookie/mentee FIRST teams</b></li>
+                    </ul>
+                </div>
+                <img src="images/ourimpact.png" alt="Our Impact" style="position:static;top:50px;right:10px;padding:30px;width:50%;" >
+            </div>
+
 
                 <div class="person-three-grid grid" style="width:80%;">
                     <div class="col" style="text-align:center">
