--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
             </div>
         </div>
 
+        <div class="grid1">
         <div class="AbtUs" style="background-color:#fff;font-family:roboto;color:#000000;text-align:end;padding-top:20px;padding-right:40px;padding-bottom:5px">
             <div class="container">
                 <img src="images/aboutus.png" alt = "Team Photos - About Us" style="position:static;top:50px;left:10px;padding:30px;width:100%;"/>
@@ -141,6 +142,7 @@
                         <h2><span style="color:#af2d83;">1,800+</span> Hours of Outreach</h2>
                     </div>
                 </div>
+        </div>
         </div>
 
         <!--
