--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
             <div class="container">
                 <img src="images/aboutus.png" alt = "Team Photos - About Us" style="position:static;top:50px;left:10px;padding:30px;width:100%;"/>
                 <div class = "text">
-                    <h1 style = "position:static;top:30px;right:40px;font-size:60px;">ABOUT US</h1>
-                    <p style="font-size:20px;position:static;padding:10px">We are FIRST Tech Challenge (FTC) Team 18225 High Definition, a
+                    <h1 style = "position:static;font-size:60px;">ABOUT US</h1>
+                    <p style="font-size:20px;position:static;">We are FIRST Tech Challenge (FTC) Team 18225 High Definition, a
                         4th year veteran robotics team from Bellevue, Washington composed of 12 enthusiastic
                         students grades 7-12. <b>Our mission</b> is to promote STEM and FIRST within our
                         community, inspiring and planting seeds for the next generation of innovators to solve challenges of the
