--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
         <div class="grid1">
         <div class="AbtUs" style="background-color:#fff;font-family:roboto;color:#000000;text-align:end;padding-top:20px;padding-right:40px;padding-bottom:5px">
-            <div class="container">
+            <div class="container1">
                 <img src="images/aboutus.png" alt = "Team Photos - About Us" style="position:static;top:50px;left:10px;padding:30px;width:100%;"/>
                 <div class = "text">
                     <h1 style = "position:static;font-size:60px;">ABOUT US</h1>
@@ -105,7 +105,7 @@
         </div>-->
 
         <div class="Impact" style="font-family:roboto;color:#000000;background-color:#fff;padding-top:5px;padding-left:40px;padding-right:40px;padding-bottom:5px">
-            <div class = container>
+            <div class = container2>
                 <div class = text>
                     <h1 style = "text-align:start;font-size:60px;">OUR IMPACT</h1>
                     <p style="text-align:start;font-size:20px;width=50%;">Our team places an emphasis on outreaching to and increasing STEM accessibility in <b>under-represented communities</b>. Some of our current and past initiatives are:</p>
