--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             </div>
         </div>
 
-        <div class="grid1">
+
         <div class="AbtUs" style="background-color:#fff;font-family:roboto;color:#000000;text-align:end;padding-top:20px;padding-right:40px;padding-bottom:5px">
             <div class="container1">
                 <img src="images/aboutus.png" alt = "Team Photos - About Us" style="position:static;top:50px;left:10px;padding:30px;width:100%;"/>
@@ -116,7 +116,7 @@
                         <li>attending the <b>2024 Affiliated Tribes for Northwest Indians Conference</b> to spread knowledge about the FIRST Program and plant efforts towards creating a tribal team</li>
                     </ul>
                 </div>
-                <img src="images/ourimpact.png" alt="Our Impact" style="position:static;top:50px;right:10px;padding:30px;width:100%;" >
+                <img src="images/ourimpact.png" alt="Our Impact" style="position:static;top:50px;right:10px;padding:30px;height=dynamic;" >
             </div>
 
 
@@ -143,7 +143,7 @@
                     </div>
                 </div>
         </div>
-        </div>
+
 
         <!--
         <div class = Animation>
