--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             </div>
         </div>
 
-
+<section class="sec1">
         <div class="AbtUs" style="background-color:#fff;font-family:roboto;color:#000000;text-align:end;padding-top:20px;padding-right:40px;padding-bottom:5px">
             <div class="container1">
                 <img src="images/aboutus.png" alt = "Team Photos - About Us" style="position:static;top:50px;left:10px;padding:30px;width:100%;"/>
@@ -95,10 +95,8 @@
                         community to ensure their success and make sure that no one is left behind.</p>
                 </div>
             </div>
-
-
-
         </div>
+</section>
 
         <!--<div class="blankBox">
 
