--- a/index.html
+++ b/index.html
@@ -83,11 +83,13 @@
 
 <section class="table1">
     <div class = table2>
-        <div class = table3>
+
         <div class="AbtUs" style="background-color:#fff;font-family:roboto;color:#000000;text-align:end;padding-top:20px;padding-right:40px;padding-bottom:5px">
             <div class="container1">
+                <div class = table3>
                 <img src="images/aboutus.png" alt = "Team Photos - About Us" style="position:static;top:50px;left:10px;padding:30px;width:100%;"/>
-                <div class = "text">
+                </div>
+                    <div class = "text">
                     <h1 style = "position:static;font-size:60px;">ABOUT US</h1>
                     <p style="font-size:20px;position:static;">We are FIRST Tech Challenge (FTC) Team 18225 High Definition, a
                         4th year veteran robotics team from Bellevue, Washington composed of 12 enthusiastic
@@ -294,7 +296,7 @@
         </div>
     </div>
 
-    -->
+
 
     <div class="Footer">
             <h4>Contact us at <a href="mailto:ftc18225@gmail.com" style="color:white">ftc18225@gmail.com</a> </h4>
@@ -329,6 +331,7 @@
                         </path></svg></a>
             </div>
     </div>
+    -->
 
     <script id="__NEXT_DATA__"
         type="application/json">{"props":{"pageProps":{}},"page":"/","query":{},"buildId":"kWtDBIdpwMm36nIJ5prE9","nextExport":true,"autoExport":true,"isFallback":false,"scriptLoader":[]}</script>
