--- a/index.html
+++ b/index.html
@@ -84,19 +84,23 @@
 <section class="table1">
     <div class = table2>
 
-        <div class="AbtUs" style="background-color:#fff;font-family:roboto;color:#000000;text-align:end;padding-top:20px;padding-right:40px;padding-bottom:5px">
+        <div class="AbtUs" style="background-color:#fff;font-family:roboto;color:#000000;padding-top:20px;padding-right:40px;padding-bottom:5px">
             <div class="container1">
-                <div class = table3>
+                <!--<div class = table3>
                 <img src="images/aboutus.png" alt = "Team Photos - About Us" style="position:static;top:50px;left:10px;padding:30px;width:100%;"/>
-                </div>
+                </div>-->
                     <div class = "text">
                     <h1 style = "position:static;font-size:60px;">ABOUT US</h1>
-                    <p style="font-size:20px;position:static;">We are FIRST Tech Challenge (FTC) Team 18225 High Definition, a
-                        4th year veteran robotics team from Bellevue, Washington composed of 12 enthusiastic
-                        students grades 7-12. <b>Our mission</b> is to promote STEM and FIRST within our
+                    <section style="font-size:20px;position:static;">
+                        <p>&#128205 Bellevue, Washington</p>
+                        <p>&#129309 Founded 2020</p>
+                        <p>&#127942 Four-Time Inspire Winners @ WA Champs</p>
+                        <p>&#</p>
+                        <p> Hello! We are FIRST Tech Challenge (FTC) Team 18225 High Definition. <b>Our mission</b> is to promote STEM and FIRST within our
                         community, inspiring and planting seeds for the next generation of innovators to solve challenges of the
                         future! We spread mechanical, programming, business, and other practices within the
                         community to ensure their success and make sure that no one is left behind.</p>
+                    </section>
                 </div>
             </div>
         </div>
