--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
                 <img src="images/aboutus.png" alt = "Team Photos - About Us" style="position:static;top:50px;left:10px;padding:30px;width:100%;"/>
                 </div>-->
                     <div class = "text">
-                    <h1 style = "position:static;font-size:60px;padding-bottom:5px;padding-top:20px">ABOUT US</h1>
-                    <section style="font-size:20px;position:static;">
+                    <h1 style = "font-size:60px;padding-top:20px;margin-bottom:5px;">ABOUT US</h1>
+                    <section style="font-size:40px;">
                         <p>&#128205 Bellevue, Washington</p>
                         <p>&#129309 Founded 2020</p>
                         <p>&#127942 Four-Time Inspire Winners @ WA Champs</p>
