--- a/index.html
+++ b/index.html
@@ -105,7 +105,19 @@
         </div>
     </div>
 </section>
+</div>
+
+
+<div class = "table1">
+    <div class = "table2">
+        <div class = table3>
+            <img src="images/2024teamphoto.jpg" alt = "2024 Team Photo" style = "position:relative;width:100;margin-top:0;margin-bottom:0;max-width:1280px;"/>
+        </div>
+        <div class = table3>
+            <img src="images/2024teamphoto.jpg" alt = "2024 Team Photo" style = "position:relative;width:100;margin-top:0;margin-bottom:0;max-width:1280px;"/>
+        </div>
     </div>
+</div>
 
         <!--<div class="blankBox">
 
