--- a/index.html
+++ b/index.html
@@ -108,14 +108,9 @@
 </div>
 
 
-<div class = "table1">
-    <div class = "table2">
-        <div class = table3>
-            <img src="images/2024teamphoto.jpg" alt = "2024 Team Photo" style = "position:relative;width:100;margin-top:0;margin-bottom:0;max-width:1280px;"/>
-        </div>
-        <div class = table3>
-            <img src="images/2024teamphoto.jpg" alt = "2024 Team Photo" style = "position:relative;width:100;margin-top:0;margin-bottom:0;max-width:1280px;"/>
-        </div>
+<div class = gallery>
+    <div class = column>
+        <img src="images/2024teamphoto.jpg" style="position:relative;width:100%"/>
     </div>
 </div>
 
