--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
 
 
 <div class = gallery>
-    <div class = column>
-        <img src="images/2024teamphoto.jpg" style="position:relative;width:100%"/>
+    <div class = photo>
+        <img src="images/2024teamphoto.jpg" style="position:relative;width:70%"/>
     </div>
 </div>
 
