--- a/index.html
+++ b/index.html
@@ -81,10 +81,8 @@
             </div>
         </div>
 
-<section class="table1">
-    <div class = table2>
+<section class="grid-container">
         <div class="AbtUs" style="background-color:#fff;font-family:roboto;color:#000000;">
-            <div class="container1">
                 <!--<div class = table3>
                 <img src="images/aboutus.png" alt = "Team Photos - About Us" style="position:static;top:50px;left:10px;padding:30px;width:100%;"/>
                 </div>-->
@@ -101,11 +99,9 @@
                         community to ensure their success and make sure that no one is left behind.</p>
                     </section>
                 </div>
-            </div>
         </div>
     </div>
 </section>
-</div>
 
 
 <div class = gallery>
