--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
 
 <body>
     <div id="__next">
+        <section class="table1">
+            <div class = table2>
         <div class="coolHeader"
             style="background-repeat:no-repeat;background-position:top right;background-attachment:fixed;background-size:cover;height:100vh">
             <div class="Tabs">
@@ -80,9 +82,13 @@
                 </div>
             </div>
         </div>
+            </div>
+        </section>
 
-<section class="grid-container">
+<section class="table1">
+    <div class = table2>
         <div class="AbtUs" style="background-color:#fff;font-family:roboto;color:#000000;">
+            <div class="container1">
                 <!--<div class = table3>
                 <img src="images/aboutus.png" alt = "Team Photos - About Us" style="position:static;top:50px;left:10px;padding:30px;width:100%;"/>
                 </div>-->
@@ -99,16 +105,21 @@
                         community to ensure their success and make sure that no one is left behind.</p>
                     </section>
                 </div>
+            </div>
         </div>
     </div>
 </section>
+</div>
 
-
+<section class="table1">
+<div class = table2>
 <div class = gallery>
     <div class = photo>
         <img src="images/2024teamphoto.jpg" style="position:relative;width:70%"/>
     </div>
 </div>
+</div>
+</section>
 
         <!--<div class="blankBox">
 
