--- a/index.html
+++ b/index.html
@@ -103,6 +103,9 @@
                                     <p>&#127942 Four-Time Inspire Winners @ WA Champs</p>
                                     <p>&#129321 2024 Worlds Motivate Award</p>
                                 </div>
+                                <div class = "feature-banner-image-div">
+                                    <img src="images/2024teamphoto.jpg" style="position:relative;width:70%" alt = "bg-image"/>
+                                </div>
                             </div>
                         </div>
                         <p> Hello! We are FIRST Tech Challenge (FTC) Team 18225 High Definition. <b>Our mission</b> is to promote STEM and FIRST within our
