--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                                     <p>&#129321 2024 Worlds Motivate Award</p>
                                 </div>
                                 <div class = "feature-banner-image-div">
-                                    <img src="images/2024teamphoto.jpg" style="position:relative;width:70%" alt = "bg-image"/>
+                                    <img src="images/2024teamphoto.jpg" sizes="(max-width: 479px) 83vw, (max-width: 991px) 45vw, 51vw" alt = "bg-image"/>
                                 </div>
                             </div>
                         </div>
